# CSE423

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  diff_example_output.sh  gen_example_output.sh  test_code_gen.py  test_code_gen_opt.py
docs/: design.md  manual.md
docs/doxygen/html/: Scanner_8cpp.html  Scanner_8cpp__incl.map  Scanner_8cpp__incl.md5  Scanner_8hpp_source.html  annotated.html  classScanner-members.html  classScanner.html  classes.html  definitions_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  pages.html
docs/doxygen/html/search/: all_2.js  all_4.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  (+1 more)
examples/: README.md  basic.tree  basic_ast.txt  basic_parse.txt  desired_ast_small.txt  factorial.tree  factorial_ast.txt  factorial_parse.txt  small.tree  small_ast.txt  small_parse.txt  test_a.tree
examples/basic/: AST.txt  IR.csv  IR.txt  assembly.s  basic.c  basic_AST.txt  basic_symbolTable.txt  optimization.txt  optimized_assembly.s  optimized_assembly.txt  parseTree.txt  symbolTable.txt  tokens.txt
examples/collatz/: AST.txt  IR.csv  IR.txt  assembly.s  collatz.c  optimized_assembly.s  parseTree.txt  symbolTable.txt  tokens.txt
examples/error/: IR.csv  error.c  optimization.txt  symbolTable.txt  tokens.txt
examples/factorial/: AST.txt  IR.csv  IR.txt  assembly.s  assembly.txt  factorial.c  factorial_AST.txt  factorial_parseTree.txt  factorial_symbolTable.txt  factorial_tokens.txt  optimization.txt  optimized_assembly.s  parseTree.txt  symbolTable.txt  tokens.txt
examples/full/: AST.txt  IR.csv  IR.txt  assembly.s  full.c  full_AST.txt  full_parseTree.txt  full_symbolTable.txt  full_tokens.txt  optimization.txt  optimized_assembly.s  parseTree.txt  symbolTable.txt  tokens.txt
examples/hell/: AST.txt  IR.csv  IR.txt  assembly.s  hell.c  optimization.txt  optimized_assembly.s  parseTree.txt  symbolTable.txt  tokens.txt
examples/primality_test/: IR.csv  assembly.s  optimization.txt  optimized_assembly.s  primality_test.c  symbolTable.txt
examples/prime_factorization/: AST.txt  IR.csv  IR.txt  assembly.s  optimization.txt  optimized_assembly.s  parseTree.txt  prime_factorization.c  tokens.txt
examples/small/: AST.txt  IR.csv  IR.txt  assembly.s  assembly.txt  optimization.txt  optimized_assembly.s  optimized_assembly.txt  parseTree.txt  small.c  small_AST.txt  small_parseTree.txt  small_symbolTable.txt  symbolTable.txt  tokens.txt
examples/st_err/: AST.txt  IR.csv  IR.txt  assembly.s  assembly.txt  optimization.txt  optimized_assembly.s  optimized_assembly.txt  parseTree.txt  st_err.c  st_err_AST.txt  st_err_symbolTable.txt  st_err_tokens.txt  symbolTable.txt  tokens.txt
examples/test_a/: AST.txt  IR.csv  IR.txt  assembly.s  optimization.txt  optimized_assembly.s  parseTree.txt  symbolTable.txt  test_a.c  test_a_AST.txt  test_a_parseTree.txt  test_a_symbolTable.txt  test_a_tokens.txt  tokens.txt
examples/test_bad/: IR.csv  optimized_assembly.s  test_bad.c  tokens.txt
examples/test_globals/: AST.txt  IR.csv  IR.txt  assembly.s  optimization.txt  optimized_assembly.s  optimized_assembly.txt  parseTree.txt  symbolTable.txt  test_globals.c  tokens.txt
examples/test_if/: AST.txt  IR.csv  IR.txt  assembly.s  optimization.txt  optimized_assembly.s  optimized_assembly.txt  parseTree.txt  symbolTable.txt  test_if.c  tokens.txt
examples/test_loops/: AST.txt  IR.csv  IR.txt  assembly.s  optimization.txt  optimized_assembly.s  parseTree.txt  symbolTable.txt  test_loops.c  tokens.txt
examples/test_mult_return/: IR.csv
examples/test_recursion/: AST.txt  IR.csv  IR.txt  assembly.s  optimized_assembly.s  parseTree.txt  symbolTable.txt  test_recursion.c  tokens.txt
examples/test_ret/: AST.txt  IR.csv  IR.txt  assembly.s  optimized_assembly.s  parseTree.txt  symbolTable.txt  test_ret.c  tokens.txt
frontend/: analyzer.cpp  analyzer.hpp  ast.cpp  ast.hpp  basicblock.cpp  basicblock.hpp  config.cpp  config.hpp  flag.cpp  flag.hpp  frontend.cpp  function.cpp  function.hpp  grammar.txt  parser.ypp  parsetree.cpp  parsetree.hpp  program.cpp  program.hpp  scanner.cpp  scanner.l  statement.cpp  statement.hpp  symboltable.cpp  symboltable.hpp
frontend/flex_bison/: lex.yy.cpp  parser.tab.cpp  parser.tab.hpp  parser.ypp  scanner.l
frontend/ir/: basicblock.cpp  basicblock.hpp  function.cpp  function.hpp  program.cpp  program.hpp  statement.cpp  statement.hpp
include/: Scanner.hpp  analyzer.hpp  config.hpp  definitions.hpp  optimizer.hpp  symboltable.hpp
include/codeGeneration/: CodeGenerator.hpp  Instruction.hpp  MemoryAllocator.hpp
include/ir/: basicblock.hpp  function.hpp  program.hpp  statement.hpp
misc/: grammar.txt
parser/: parser.ypp
scanner/: grammar.txt  parser.y  scanner.cpp  scanner.l
src/: Scanner.cpp  analyzer.cpp  config.cpp  definitions.cpp  frontend.cpp  main.cpp  optimizer.cpp  parsetree.cpp  scanner.l  symboltable.cpp
src/codeGeneration/: CodeGenerator.cpp  Instruction.cpp  MemoryAllocator.cpp
src/flex_bison/: parser.ypp  scanner.l
src/ir/: basicblock.cpp  function.cpp  program.cpp  statement.cpp
test_files/: a.out  basic.c  full.c  small.c  st_err.c  test_a.c  test_ir.c
